On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   CZMLBillboardMaker.py
	modified:   CZMLBillboardMaker_dialog_base.ui
	new file:   cesiumPreview.py
	modified:   help/build/doctrees/environment.pickle
	modified:   help/build/doctrees/index.doctree
	modified:   help/build/html/.buildinfo
	modified:   help/build/html/_static/basic.css
	modified:   help/build/html/_static/classic.css
	modified:   help/build/html/_static/doctools.js
	modified:   help/build/html/_static/jquery.js
	modified:   help/build/html/_static/language_data.js
	modified:   help/build/html/_static/pygments.css
	modified:   help/build/html/_static/searchtools.js
	modified:   help/build/html/_static/sidebar.js
	modified:   help/build/html/_static/underscore.js
	modified:   help/build/html/genindex.html
	modified:   help/build/html/index.html
	modified:   help/build/html/search.html
	modified:   help/build/html/searchindex.js
	modified:   pb_tool.cfg

--- a/CZMLBillboardMaker_dialog_base.ui
+++ b/CZMLBillboardMaker_dialog_base.ui
@@ -49,7 +49,7 @@
     <widget class="QLabel" name="labelDescription">
      <property name="geometry">
       <rect>
-       <x>109</x>
+       <x>19</x>
        <y>230</y>
        <width>121</width>
        <height>20</height>
@@ -137,7 +137,7 @@
     <widget class="QComboBox" name="comboBoxHeight">
      <property name="geometry">
       <rect>
-       <x>320</x>
+       <x>210</x>
        <y>252</y>
        <width>170</width>
        <height>25</height>
@@ -192,7 +192,7 @@
     <widget class="QLabel" name="labelImage_2">
      <property name="geometry">
       <rect>
-       <x>320</x>
+       <x>210</x>
        <y>230</y>
        <width>81</width>
        <height>20</height>
@@ -247,7 +247,7 @@
     <widget class="QComboBox" name="comboBoxDescription">
      <property name="geometry">
       <rect>
-       <x>109</x>
+       <x>19</x>
        <y>252</y>
        <width>170</width>
        <height>25</height>
@@ -369,6 +369,12 @@
      </property>
      <property name="text">
       <string>Add start and end times to features.</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLabel" name="labelOptionalAttributes">
@@ -612,6 +618,19 @@
       </rect>
      </property>
     </widget>
+    <widget class="QCheckBox" name="checkBoxSavePreview">
+     <property name="geometry">
+      <rect>
+       <x>400</x>
+       <y>250</y>
+       <width>121</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Save Preview</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="tabClock">
     <attribute name="title">
@@ -644,7 +663,7 @@
      </property>
      <property name="dateTime">
       <datetime>
-       <hour>18</hour>
+       <hour>16</hour>
        <minute>0</minute>
        <second>0</second>
        <year>2020</year>
@@ -712,7 +731,7 @@
      </property>
      <property name="dateTime">
       <datetime>
-       <hour>18</hour>
+       <hour>16</hour>
        <minute>0</minute>
        <second>0</second>
        <year>2020</year>
@@ -773,7 +792,7 @@
      </property>
      <property name="dateTime">
       <datetime>
-       <hour>18</hour>
+       <hour>16</hour>
        <minute>0</minute>
        <second>0</second>
        <year>2020</year>
